<resources>
    <string name="app_name">RentBy</string>
    <string name="your_web_client_id">62922124005-hmver9ubbp7b37l6tepj4r848tdn339i.apps.googleusercontent.com</string>
    <string name="name">Nama</string>
    <string name="telephone">Nomor Hp</string>
    <string name="address">Alamat</string>
    <string name="save">Simpan</string>
    <string name="location">Lokasi</string>
    <string name="profile">Profil</string>
    <string name="login_title">Do hobbies no worries</string>
    <string name="login_subtitle">Find your hobbies, rent the equipment, pay less, get fun, more happy!</string>
    <string name="continue_with_google">Continue with Google</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="your_profile">Profile</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hiking">Hiking</string>
    <string name="cosplay">Cosplay</string>
    <string name="title">judul</string>
    <string name="description">deskripsi</string>
    <string name="price">harga</string>
    <string name="Day">Hari</string>
    <string name="per_day">/Hari</string>
    <string name="Description">Deskripsi</string>
    <string name="lipsum_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec pulvinar enim. Duis cursus lorem vel consequat viverra. Vestibulum non augue nibh. Aenean ac blandit orci. Aliquam interdum eros et mollis maximus. Fusce suscipit vehicula ipsum, dapibus tincidunt libero egestas nec. Curabitur in augue vel ipsum eleifend cursus vehicula vel tellus. Donec dictum, risus eget sollicitudin facilisis, nunc mi auctor augue, eu convallis eros nisi vitae risus. Quisque convallis ipsum porttitor tellus porta, sed aliquam ante placerat. Nullam vitae odio placerat orci viverra tempor. Proin fermentum dictum neque eget finibus. In dictum vulputate turpis in fermentum. Etiam mauris augue, porta sed quam in, pretium volutpat nibh. Nullam maximus turpis mauris, eu vulputate justo dapibus vitae. Morbi dolor magna, sodales quis placerat fermentum, eleifend et quam. Praesent gravida lorem efficitur justo fermentum, sed ultrices tellus eleifend. Aliquam sit amet eleifend ligula, et placerat felis. Proin felis lorem, aliquam et leo in, tincidunt auctor erat. Nunc mollis, justo et faucibus aliquam, magna justo interdum lacus, sed sodales dolor tellus ac justo.</string>
    <string name="chat">pesan</string>
    <string name="favorite">favorite</string>
    <string name="back">kembali</string>
    <string name="share">bagikan</string>
    <string name="payment_method">Metode Pembayaran</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lipsum_2_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam risus felis, pretium at mauris non, ullamcorper sollicitudin eros. Aliquam ornare lacus eu lectus sodales dignissim. Etiam porta, enim sit amet dictum iaculis, nulla mauris vehicula diam, ac molestie nibh nisi nec mi. Curabitur non nisi ac diam auctor varius. Aenean sollicitudin vestibulum magna, vitae pellentesque massa viverra a. Maecenas sed pharetra purus. Mauris eget bibendum sem, sit amet sagittis nisi. Suspendisse et urna blandit, accumsan felis eget, imperdiet mauris. Nullam metus justo, interdum eu venenatis vel, fringilla non lorem. \n\nSed rutrum eu dolor eu dictum. Nunc at tempus lectus, id lobortis leo. In ultricies nisl non diam tristique, congue tempor quam scelerisque. Fusce at porta felis, sit amet vulputate nunc. Curabitur vitae dapibus lectus. Curabitur fringilla ornare facilisis. Vestibulum non pretium orci, vitae dignissim neque. Nulla sed metus ut dolor tempus consequat et sit amet dui. Vivamus et lacinia dui. In porttitor sapien in lacus interdum porttitor. Sed ac rutrum lacus. Aliquam pretium euismod arcu sed aliquet. Suspendisse non sem quis mauris mollis pellentesque in at lorem. Donec rhoncus vulputate nisi, sit amet tempus quam finibus vitae.</string>
    <string name="searchbar_hint">Cari barang</string>
    <string name="loading_data_error">Oops! Ada masalah saat memuat data\nSilakan coba lagi</string>
    <string name="user_id">03d58a5b\-e5e5\-40d5\-af92\-0c0b25fd8478</string>
    <string name="waiting_for_payment">Menunggu Pembayaran</string>
    <string name="order_ready_for_pickup">Barang Siap Diambil</string>
    <string name="order_is_in_renting_date">Barang dalam Masa Rental</string>
    <string name="order_needs_to_be_returned">Barang Perlu dikembalikan</string>
    <string name="order_finished">Pesanan Selesai</string>
    <string name="order_canceled">Pesanan Dibatalkan</string>
    <string name="home">Beranda</string>
    <string name="search">Cari</string>
    <string name="booked">Pesanan</string>
</resources>